Prevent urlToCopy overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -564,4 +564,5 @@ h2
 	padding:1vmin;
 	z-index:6;
 	border-radius:1vmin;
+	overflow-wrap: break-word;
 }
